added new activity, some fixes

--- a/QRCodeScanner2/app/src/main/AndroidManifest.xml
+++ b/QRCodeScanner2/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".GalleryActivity" />
-        <activity android:name=".FullImageActivity"></activity>
+        <activity android:name=".FullImageActivity" />
+        <activity android:name=".ResultsActivity"></activity>
     </application>
 
 </manifest>
