--- a/QRfixes/app/src/main/AndroidManifest.xml
+++ b/QRfixes/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.user.qrcodescanner">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
 
     <application
         android:allowBackup="true"
