created class ResultActivityForQr, error in Gallery activity to show full screen image,problems with first launching in android 6.0

--- a/QRfixes/app/src/main/AndroidManifest.xml
+++ b/QRfixes/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".GalleryActivity" />
         <activity android:name=".ResultsActivity" />
+        <activity android:name=".ResultsActivityForQr" />
         <activity android:name=".FullPhotoActivity" />
     </application>
 
