--- a/QRfixes/app/build.gradle
+++ b/QRfixes/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.zxing:core:3.2.1'
+    compile 'com.android.support:design:23.2.1'
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
 
 
